--- a/archives.html
+++ b/archives.html
@@ -6,100 +6,180 @@
 -->
 <html>
 <head>
-	<title>Archives</title>
-	<meta charset="utf-8">
-	<meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
-	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link href="assets/css/main.css" rel="stylesheet"><!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <title>Archives</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, user-scalable=no" name=
+    "viewport">
+	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link href="assets/css/main.css" rel="stylesheet">
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	<!-- For Safari Browser: -->
-	<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
-	<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
-	<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
-	<link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-	<link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed"><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-</head>
-<body>
-	<!-- Wrapper -->
-	<div id="wrapper">
-		<!-- Header -->
-		<header id="header">
-			<center>
-				<h1><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo2.png" style="width:18px;height:18px;"></a></h1>&nbsp; <span style="font-family: 'Heebo';"></span>
-				<h1><span style="font-family: 'Heebo';"><a href="http://kironroy.github.io">Kiron Roy: Welcome to Archives</a></span></h1><span style="font-family: 'Heebo';">&nbsp; </span>
-			</center><span style="font-family: 'Heebo';"></span>
-			<nav>
-				<span style="font-family: 'Heebo';"></span>
-				<ul>
-					<!-- <a href="#footer" class="icon fa-info-circle">About</a></li> -->
-				</ul>
-			</nav>
-		</header><!-- Main -->
-		<div id="main">
-			<span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF1.jpg"><img alt="" src="images/thumbs/archT1.jpg"></a> <!-- <h2>Magna feugiat lorem</h2> -->
-				 <!-- <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>--></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF2.jpg"><img alt="" src="images/thumbs/archT2.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF3.jpg"><img alt="" src="images/thumbs/archT3.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF4.jpg"><img alt="" src="images/thumbs/archT4.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF5.jpg"><img alt="" src="images/thumbs/archT5.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF6.jpg"><img alt="" src="images/thumbs/archT6.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF7.jpg"><img alt="" src="images/thumbs/archT7.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF8.jpg"><img alt="" src="images/thumbs/archT8.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF9.jpg"><img alt="" src="images/thumbs/archT9.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF10.jpg"><img alt="" src="images/thumbs/archT10.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF11.jpg"><img alt="" src="images/thumbs/archT11.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF12.jpg"><img alt="" src="images/thumbs/archT12.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF13.jpg"><img alt="" src="images/thumbs/archT13.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF14.jpg"><img alt="" src="images/thumbs/archT14.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF15.jpg"><img alt="" src="images/thumbs/archT15.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-			<article class="thumb">
-				<span style="font-family: 'Heebo';"><a class="image" href="images/fulls/archF16.jpg"><img alt="" src="images/thumbs/archT16.jpg"></a></span>
-			</article><span style="font-family: 'Heebo';"></span>
-		</div><!-- Footer -->
-		<!-- Scripts -->
-		<span style="font-family: 'Heebo';">
-		<script src="assets/js/jquery.min.js">
-		</script>
-		<script src="assets/js/jquery.poptrox.min.js">
-		</script>
-		<script src="assets/js/skel.min.js">
-		</script>
-		<script src="assets/js/util.js">
-		</script> <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<link rel="icon" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
 
-		<script src="assets/js/main.js">
-		</script></span>
-	</div>
+		<!-- For third-generation iPad with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
+
+		<!-- For iPhone with high-resolution Retina display: -->
+
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+
+		<!-- For first- and second-generation iPad: -->
+
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+
+		<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+
+		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+	    <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head>
+
+<body>
+    <!-- Wrapper -->
+
+
+    <div id="wrapper">
+        <!-- Header -->
+
+
+        <header id="header">
+            <center>
+
+				<h1><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo"
+                 src="logo2.png" style="width:18px;height:18px;"></a></h1> &nbsp;
+
+				<span style="font-family: 'Heebo';"><h1><a href="http://kironroy.github.io">Kiron Roy: Welcome to Archives </a> </h1>&nbsp;
+
+
+                </h1>
+
+           </center>
+
+
+            <nav>
+                <ul>
+                    <!-- <a href="#footer" class="icon fa-info-circle">About</a></li> -->
+                </ul>
+            </nav>
+        </header>
+        <!-- Main -->
+
+
+        <div id="main">
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF1.jpg"><img alt="" src=
+                "images/thumbs/archT1.jpg"></a>
+                <!-- <h2>Magna feugiat lorem</h2> -->
+
+                <!-- <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>-->
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF2.jpg"><img alt="" src=
+                "images/thumbs/archT2.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF3.jpg"><img alt="" src=
+                "images/thumbs/archT3.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF4.jpg"><img alt="" src=
+                "images/thumbs/archT4.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF5.jpg"><img alt="" src=
+                "images/thumbs/archT5.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF6.jpg"><img alt="" src=
+                "images/thumbs/archT6.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF7.jpg"><img alt="" src=
+                "images/thumbs/archT7.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF8.jpg"><img alt="" src=
+                "images/thumbs/archT8.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF9.jpg"><img alt="" src=
+                "images/thumbs/archT9.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF10.jpg"><img alt="" src=
+                "images/thumbs/archT10.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF11.jpg"><img alt="" src=
+                "images/thumbs/archT11.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF12.jpg"><img alt="" src=
+                "images/thumbs/archT12.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF13.jpg"><img alt="" src=
+                "images/thumbs/archT13.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF14.jpg"><img alt="" src=
+                "images/thumbs/archT14.jpg"></a>
+            </article>
+
+
+            <article class="thumb">
+                <a class="image" href="images/fulls/archF15.jpg"><img alt="" src=
+                "images/thumbs/archT15.jpg"></a>
+            </article>
+
+						<article class="thumb">
+                <a class="image" href="images/fulls/archF16.jpg"><img alt="" src=
+                "images/thumbs/archT16.jpg"></a>
+            </article>
+        </div>
+        <!-- Footer -->
+
+
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js">
+    </script>
+    <script src="assets/js/jquery.poptrox.min.js">
+    </script>
+    <script src="assets/js/skel.min.js">
+    </script>
+    <script src="assets/js/util.js">
+    </script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+
+    <script src="assets/js/main.js">
+    </script>
 </body>
 </html>
