--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@
       <div class="container">
         <header>
           <h2>Contact</h2>
-          <p><span style="color:#BAB0AE"><a href="http://kironroy.github.io/archives">_</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
+          <p><span style="color:#BAB0AE"><a href="http://kironroy.github.io/archives"><i class="fa fa-smile-o" aria-hidden="true"></i>
+</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
         </header>
       </div>
     </section>
