--- a/archives.html
+++ b/archives.html
@@ -17,7 +17,7 @@
        if ( e.keyCode == konami[state] ) state++;
        else state = 0;
        if ( state == 10 )
-         window.location = "https://www.youtube.com/watch?v=Rn2cf_wJ4f4";
+         window.location = "https://www.youtube.com/watch?v=Ah7Mx38Sguo";
        }, true);
    }
    </script>
