css in header scripts in footer

--- a/index.html
+++ b/index.html
@@ -3,35 +3,13 @@
 <html>
 <head>
 	<title>Kiron Roy</title>
+	<!-- styles start -->
 	<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-  <script src="js/jquery.min.js">
-	</script>
-	<script type="text/javascript">
-	if ( window.addEventListener ) {
-	  var state = 0, fun = [70,85,78];
-	  window.addEventListener("keydown", function(e) {
-	    if ( e.keyCode == fun[state] ) state++;
-	    else state = 0;
-	    if ( state == 3 )
-	      window.location = "https://kironroy.github.io/archives";
-	    }, true);
-	}
-	</script>
-	<script src="js/jquery.scrolly.min.js">
-	</script>
-	<script src="js/jquery.scrollzer.min.js">
-	</script>
-	<script src="js/skel.min.js">
-	</script>
-	<script src="js/skel-layers.min.js">
-	</script>
-	<script src="js/init.js">
-	</script> <noscript>
-	<link href="favicon.ico" rel="shortcut icon">
+  <link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/style-wide.css" rel="stylesheet"></noscript><!-- For Safari Browser: -->
@@ -40,7 +18,8 @@
 	<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
 	<link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For iPhone: -->
 	<link href="apple-touch-icon-iphone.png" rel="apple-touch-icon"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-	<link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed"><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+  <link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed"><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+  <!-- styles end -->
 </head>
 <body>
 	<!-- Header -->
@@ -395,6 +374,31 @@
 		</section>
 	</div><!-- Footer -->
 	<div id="footer">
+	<!-- JavaScripts start -->
+		<script src="js/jquery.min.js">
+		</script>
+	<script type="text/javascript">
+	if ( window.addEventListener ) {
+		var state = 0, fun = [70,85,78];
+		window.addEventListener("keydown", function(e) {
+			if ( e.keyCode == fun[state] ) state++;
+			else state = 0;
+			if ( state == 3 )
+				window.location = "https://kironroy.github.io/archives";
+			}, true);
+	}
+	</script>
+	<script src="js/jquery.scrolly.min.js">
+	</script>
+	<script src="js/jquery.scrollzer.min.js">
+	</script>
+	<script src="js/skel.min.js">
+	</script>
+	<script src="js/skel-layers.min.js">
+	</script>
+	<script src="js/init.js">
+	</script>
+	<!-- JavaScripts ends -->
 		<div class="copyright" style="margin-left: 2em">
 			<a href="http://html5up.net">HTML5 UP</a> &nbsp; <a href="http://kironroy.github.io/">Kiron Roy</a>
 		</div>
