--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Scripts BEGIN -->
 	<script src="js/jquery.min.js">
 	</script>
+	<!-- fun -->
 	<script type="text/javascript">
 	if ( window.addEventListener ) {
 	  var state = 0, fun = [70,85,78];
@@ -21,6 +22,7 @@
 	      window.location = "https://kironroy.github.io/archives";
 	    }, true);
 	}
+	<!-- fun -->
 	</script>
   </script>
 	<script src="js/jquery.scrollzer.min.js">
