--- a/hh.html
+++ b/hh.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+<link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
+</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
-  font-family: Verdana, sans-serif;
+  font-family: "Heebo", sans-serif;
+  font-weight: 300;
+  background-color: #32292C;
   margin: 0;
 }
 
@@ -11,8 +17,13 @@ body {
   box-sizing: border-box;
 }
 
+h4 {
+ color: white;
+ text-align: center;
+ }
+
 .row > .column {
-  padding: 0 1px;
+  padding: 0 px;
 }
 
 .row:after {
@@ -23,7 +34,8 @@ body {
 
 .column {
   float: left;
-  width: 100%;
+  width: 25%;
+  padding: 10;
 }
 
 /* The Modal (background) */
@@ -46,8 +58,8 @@ body {
   background-color: #FFF;
   margin: auto;
   padding: 0;
-  width: 90%;
-  max-width: 1200px;
+  width: 100%;
+  max-width: 1000px;
 }
 
 /* The Close Button */
@@ -144,7 +156,10 @@ img.hover-shadow {
 </style>
 <body>
 
-<h2 style="text-align:center">Lightbox</h2>
+<!-- first thing user sees -->
+
+<h2 style="text-align:center"><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:90px;height:90px;"></a></h2>
+<h4>Night Scene </h4>
 
 <div class="row">
   <div class="column">
@@ -159,7 +174,7 @@ img.hover-shadow {
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
-    <div class="column">
+   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
   </div>
   <div class="column">
@@ -173,12 +188,13 @@ img.hover-shadow {
   </div>
 </div>
 
+<!-- inside styling on thumbs -->
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 8</div>
+      <div class="numbertext">1/8</div>
       <img src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%">
     </div>
 
@@ -223,30 +239,31 @@ img.hover-shadow {
       <p id="caption"></p>
     </div>
 
-
+<!-- Thumbs in slider -->
     <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%" onclick="currentSlide(1)" alt="Nature and sunddrise">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/02.jpg" style="width:100%" onclick="currentSlide(2)" alt="Trolltunga, Norway">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%" onclick="currentSlide(1)" alt="Import Tire">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/03.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/02.jpg" style="width:100%" onclick="currentSlide(2)" alt="Import Demise">
     </div>
     <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/03.jpg" style="width:100%" onclick="currentSlide(3)" alt="Crosses">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%" onclick="currentSlide(4)" alt="Preschool Parking">
+    </div>
+    <br>
+  <div class="column">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%" onclick="currentSlide(5)" alt="Black">
     </div>
   <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/06.jpg" style="width:100%" onclick="currentSlide(6)" alt="Frisbee Golf Night">
     </div>
   <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/06.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/07.jpg" style="width:100%" onclick="currentSlide(7)" alt="Jesus">
     </div>
   <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/07.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-    </div>
-  <div class="column">
-      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%" onclick="currentSlide(8)" alt="B | G">
     </div>
 
   </div>
